@@ -376,6 +376,7 @@ setup(name='gaphor',
                 'gaphor.diagram',
                 'gaphor.ui',
                 'gaphor.misc',
+                'gaphor.adapters',
                 'zope',
                 'zope.interface',
                 'zope.component.bbb',
